--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "cli-color": "^1.2.0",
+    "client-certificate-auth": "^0.3.0",
     "config": "^1.20.4",
     "console-debug": "^0.4.2",
     "console-stamp": "^0.2.5",
